--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -14,12 +14,7 @@ header{
             }
             form{
                 .btn{
-                    color: $btn_text;
-                    background-color: $btn_bg;
-                    transition: transform .5s ease-in-out;
-                    &:hover{
-                        transform: scale(1.1);
-                    }
+                    @include btnStyle()
                 }
             }
         }
