--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,3 +1,5 @@
+
+
 main {
     .main_title {
         background-image: url(../img/fondo.jpg);
@@ -12,33 +14,15 @@ main {
             text-align: center;
         }
         .card_main {
-            background: linear-gradient(270deg, $card_bg_dk 0%, $card_bg_lt 100%);
-            border: solid 5px $border_color;
-            border-radius: 20px;
-            padding: 2rem;
-            -webkit-box-shadow: 10px 6px 20px 0px rgba(0, 0, 0, 0.75);
-            -moz-box-shadow: 10px 6px 20px 0px rgba(0, 0, 0, 0.75);
-            box-shadow: 10px 6px 20px 0px rgba(0, 0, 0, 0.75);
-            img {
-                border-radius: 20px;
-            }
+            @include cardContent($card_bg_lt,$card_bg_dk)
             }
         }
     }
 
     .card_data {
-        background: linear-gradient(270deg, $card_bg_lt 0%, $card_bg_dk 100%);
-        border: solid 5px $border_color;
-        border-radius: 20px;
-        padding: 2rem;
-        -webkit-box-shadow: 10px 6px 20px 0px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 10px 6px 20px 0px rgba(0, 0, 0, 0.75);
-        box-shadow: 10px 6px 20px 0px rgba(0, 0, 0, 0.75);
         h4{
             font-weight: bolder;
             text-align: center;
         }
-        img {
-            border-radius: 20px;
-        }
+        @include cardContent($card_bg_dk,$card_bg_lt)     
     }
