--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,4 +1,5 @@
 body{
+    @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
     background-image: url(../img/fondo_bd.jpg);
     background-size: cover;
     font-family: 'Lato', sans-serif;
