--- a/css/style.css
+++ b/css/style.css
@@ -129,8 +129,8 @@ main section .card_main img {
 
 .section_data .img_section {
   float: right;
-  padding: 0 50px;
-  width: 40%;
+  width: 50%;
+  padding: 10px;
 }
 
 .section_data .video {
