--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -73,8 +73,8 @@ main {
         }
         .img_section{
             float: right;
-            padding: 0 50px;
-            width: 40%;         
+            width: 50%;
+            padding: 10px;      
         }
         .video{
             filter: drop-shadow(2px 2px 20px black);
